# glassbox

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
crates/glassbox-core/: Cargo.toml  README.md
crates/glassbox-core/src/: dtype.rs  error.rs  lib.rs  shape.rs  storage.rs  tensor.rs
crates/glassbox-interp/: Cargo.toml  README.md
crates/glassbox-interp/src/: attribution.rs  error.rs  hooks.rs  lib.rs  patching.rs  path_patching.rs  probes.rs  sae.rs
crates/glassbox-models/: Cargo.toml  HOOKS.md  README.md
crates/glassbox-models/examples/: cli_generate.rs
crates/glassbox-models/src/: config.rs  error.rs  forward.rs  forward_async.rs  glx.rs  gpt2.rs  lib.rs  tokenizer.rs
crates/glassbox-runtime/: Cargo.toml  README.md
crates/glassbox-runtime/src/: arena.rs  async_backend.rs  backend.rs  cpu.rs  error.rs  hooks.rs  lib.rs  ops.rs  sampling.rs  wgpu_backend.rs
crates/glassbox-wasm/: Cargo.toml  README.md
crates/glassbox-wasm/src/: lib.rs
docs/: perf-notes.md
docs/media/: README.md
scripts/: convert_weights.py
shaders/: add.wgsl  attention.wgsl  embed.wgsl  gelu.wgsl  layernorm.wgsl  matmul.wgsl  softmax.wgsl
web/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: glassbox.ts
web/src/lib/stores/: session.svelte.ts
web/src/lib/viz/: AttentionGrid.svelte  CircuitCanvas.svelte  NeuronAtlas.svelte  PathPatchPanel.svelte  ResidualRiver.svelte  SaePanel.svelte
web/src/routes/: +page.svelte
