[workspace]
resolver = "2"
members = [
    "crates/glassbox-core",
    "crates/glassbox-runtime",
    "crates/glassbox-models",
    "crates/glassbox-interp",
    "crates/glassbox-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/glassbox-dev/glassbox"
authors = ["glassbox contributors"]

[workspace.dependencies]
glassbox-core    = { path = "crates/glassbox-core",    version = "0.1.0" }
glassbox-runtime = { path = "crates/glassbox-runtime", version = "0.1.0" }
glassbox-models  = { path = "crates/glassbox-models",  version = "0.1.0" }
glassbox-interp  = { path = "crates/glassbox-interp",  version = "0.1.0" }

thiserror     = "2"
anyhow        = "1"
bytemuck      = { version = "1.16", features = ["derive"] }
half          = { version = "2.4", features = ["bytemuck"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tracing       = "0.1"
rayon         = "1.10"
smallvec      = { version = "1.13", features = ["serde"] }
ahash         = { version = "0.8", features = ["serde"] }
rand          = { version = "0.8", default-features = false, features = ["std_rng"] }

wgpu          = "22"
pollster      = "0.4"
bytemuck_derive = "1"

wasm-bindgen  = "0.2"
js-sys        = "0.3"
web-sys       = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
panic = "abort"
