[package]
name = "glassbox-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
bytemuck.workspace = true
half.workspace = true
serde = { workspace = true, optional = true }
smallvec.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]
