[package]
name = "glassbox-interp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
glassbox-core.workspace = true
glassbox-runtime.workspace = true
glassbox-models.workspace = true
thiserror.workspace = true
ahash.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
glassbox-runtime = { workspace = true, features = ["cpu"] }
