[package]
name = "glassbox-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
glassbox-core.workspace = true
glassbox-runtime.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
half.workspace = true
bytemuck.workspace = true
tracing.workspace = true
ahash.workspace = true
